--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <a id="home"></a>
     <div class="contaner" >
         <div class="logo" >
-            <img src="IMG_20210317_015232_085.jpg" width="100px" height="50pxpx" class="logo-img">
+            <img src="./IMG_20210317_015232_085.jpg" width="100px" height="50pxpx" class="logo-img">
         </div>
         <div class="contant" >
             <ul>
