--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                         Nature
                     </a>
                     <a href="#" data-filter=".branding">
-                        Portrade
+                        portrait
                     </a>
                     <a href="#" data-filter=".web">
                         Flowers
