--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#Photography" class="nav-link">Portfolio</a>
+                        <a href="#Photography" class="nav-link">Photography</a>
                     </li>
                     <li class="nav-item">
                         <a href="#blog" class="nav-link">Blog</a>
