--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section class="section bg-custom-gray" id="portfolio">
+    <section class="section bg-custom-gray" id="Photography">
         <div class="container">
             <h1 class="mb-5"><span class="text-danger">My</span> Photography</h1>
             <div class="portfolio">
