--- a/index.html
+++ b/index.html
@@ -659,6 +659,32 @@
                             </div>
                         </div>
                     </div>
+			 <div class="col-md-6 col-lg-4 branding">
+                        <div class="portfolio-item">
+                            <img src="./assets/imgs/branding-7.jpg" class="img-fluid"
+                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/branding-7.jpg"></a>
+                                <div class="text-holder">
+                                    <!-- <h6 class="title">BRANDING</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 branding">
+                        <div class="portfolio-item">
+                            <img src="./assets/imgs/branding-8.jpg" class="img-fluid"
+                                alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/branding-8.jpg"></a>
+                                <div class="text-holder">
+                                    <!-- <h6 class="title">BRANDING</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>           
