--- a/index.html
+++ b/index.html
@@ -531,7 +531,66 @@
                             </div>
                         </div>                                                     
                     </div>
-
+                    <div class="col-md-6 col-lg-4 web">
+                        <div class="portfolio-item">
+                            <img src="./assets/imgs/web-5.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <div class="content-holder">
+                                <a class="img-popup" href="./assets/imgs/web-5.jpg"></a>
+                                <div class="text-holder">
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 web">
+                        <div class="portfolio-item">
+                            <img src="./assets/imgs/web-6.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <div class="content-holder">
+                                <a class="img-popup" href="./assets/imgs/web-6.jpg"></a>
+                                <div class="text-holder">
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 web">
+                        <div class="portfolio-item">
+                            <img src="./assets/imgs/web-7.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <div class="content-holder">
+                                <a class="img-popup" href="./assets/imgs/web-7.jpg"></a>
+                                <div class="text-holder">
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 web">
+                        <div class="portfolio-item">
+                            <img src="./assets/imgs/web-8.jpeg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <div class="content-holder">
+                                <a class="img-popup" href="./assets/imgs/web-8.jpeg"></a>
+                                <div class="text-holder">
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 web">
+                        <div class="portfolio-item">
+                            <img src="./assets/imgs/web-9.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <div class="content-holder">
+                                <a class="img-popup" href="./assets/imgs/web-9.jpg"></a>
+                                <div class="text-holder">
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
                     <div class="col-md-6 col-lg-4 advertising"> 
                         <div class="portfolio-item">
                             <img src="./assets/imgs/advertising-1.jpeg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
@@ -544,6 +603,30 @@
                             </div>
                         </div>                                                       
                     </div> 
+                    <div class="col-md-6 col-lg-4 advertising"> 
+                        <div class="portfolio-item">
+                            <img src="./assets/imgs/advertising-5.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
+                            <div class="content-holder">
+                                <a class="img-popup" href="./assets/imgs/advertising-5.jpg"></a>
+                                <div class="text-holder">
+                                    <!-- <h6 class="title">ADVERSITING</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                </div>
+                            </div>
+                        </div>                                                       
+                    </div>
+                    <div class="col-md-6 col-lg-4 advertising"> 
+                        <div class="portfolio-item">
+                            <img src="./assets/imgs/advertising-6.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
+                            <div class="content-holder">
+                                <a class="img-popup" href="./assets/imgs/advertising-6.jpg"></a>
+                                <div class="text-holder">
+                                    <!-- <h6 class="title">ADVERSITING</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
+                                </div>
+                            </div>
+                        </div>                                                       
+                    </div>  
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
                             <img src="./assets/imgs/web-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
@@ -581,6 +664,7 @@
                         </div>
                                 
                     </div> 
+                    
                    <div class="col-md-6 col-lg-4 branding new">
                         <div class="portfolio-item">
                             <img src="./assets/imgs/branding-1.jpg" class="img-fluid"
