--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Mithlesh Singh</h1>
-                <h6 class="header-mono" >Frond end Designer | Back End Designer | Photography</h6>
+                <h6 class="header-mono" >Frond End Designer | Back End Designer | Photography</h6>
                 <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
             </div>
         </div>
@@ -51,7 +51,7 @@
                     <img src="./assets/imgs/avatar.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Mithlesh Singh</h5>
-                        <div class="brand-subtitle">Web Designer | Developer</div>
+                        <div class="brand-subtitle">Web Designer | Developer | Photographer</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
