--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
      crossorigin="anonymous"></script>
 	<meta charset="utf-8">
 	
-	<!-- VISA Tracking Code for https://mithleshsingh.com.np/ -->
-	<script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','4931daa8-3d90-11ed-b589-901b0edac50a','va')</script>
-	<!-- VISA Tracking Code for https://mithleshsingh.com.np/ -->
+	
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Mithlesh_Singh landing page.">
     <meta name="author" content="Devcrud">
@@ -20,6 +18,7 @@
      crossorigin="anonymous"></script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+	<!-- VISA Tracking Code for https://mithleshsingh.com.np/ --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','4931daa8-3d90-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for https://mithleshsingh.com.np/ -->
     <!-- <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i> Components</a> -->
     <header class="header">
         <div class="container">
