--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Start your development with Mithlesh_Singh landing page.">
     <meta name="author" content="Devcrud">
     <title>Mithlesh Landing page</title>
+	<link rel="icon" href="./assets/imgs/icon.png">
     <!-- font icons -->
     <link rel="stylesheet" href="./assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Mks main styles -->
