--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- VISA Tracking Code for https://mithleshsingh.com.np/ --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','4931daa8-3d90-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for https://mithleshsingh.com.np/ -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9368116902426905"
-     crossorigin="anonymous"></script>
 	<meta charset="utf-8">
-	
-	
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Mithlesh_Singh landing page.">
     <meta name="author" content="Devcrud">
     <title>Mithlesh Landing page</title>
-	<link rel="icon" href="./assets/imgs/icon.png">
+    <link rel="icon" href="./assets/imgs/icon.png">
     <!-- font icons -->
     <link rel="stylesheet" href="./assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Mks main styles -->
 	<link rel="stylesheet" href="./assets/css/mks.css">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9368116902426905"
-     crossorigin="anonymous"></script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-	<!-- VISA Tracking Code for https://mithleshsingh.com.np/ --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','4931daa8-3d90-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for https://mithleshsingh.com.np/ -->
     <!-- <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i> Components</a> -->
     <header class="header">
         <div class="container">
@@ -34,7 +26,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Mithlesh Singh</h1>
-                <h6 class="header-mono" >Front End Designer | Back End Designer | Photography</h6>
+                <h6 class="header-mono" >Frond End Designer | Back End Designer | Photography</h6>
                 <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
             </div>
         </div>
@@ -934,6 +926,6 @@
 
     <!-- mks js -->
     <script src="./assets/js/mks.js"></script>
-<!-- VISA Tracking Code for https://mithleshsingh.com.np/ --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','4931daa8-3d90-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for https://mithleshsingh.com.np/ -->
+
 </body>
 </html>
