--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Mithlesh_Singh landing page.">
     <meta name="author" content="Devcrud">
-    <title>Mithlesh Landing page</title>
+    <title>Mithlesh Singh</title>
     <link rel="icon" href="./assets/imgs/icon.png">
     <!-- font icons -->
     <link rel="stylesheet" href="./assets/vendors/themify-icons/css/themify-icons.css">
