--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul class="navbar-nav brand">
                     <img src="./assets/imgs/avatar.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
-                        <h5 class="brand-title">Mithlesh Singh</h5>
+                        <h5 class="brand-title">Mithlesh Kumar Singh</h5>
                         <div class="brand-subtitle">Web Designer | Developer | Photographer</div>
                     </li>
                 </ul>
