--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </div>
     </section>
 
-    <section class="section bg-custom-gray" id="price">
+<!--     <section class="section bg-custom-gray" id="price">
         <div class="container">
             <h1 class="mb-5"><span class="text-danger">Packs</span> Pricing</h1>
             <div class="row align-items-center">
@@ -456,7 +456,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="section bg-dark py-5">
         <div class="container text-center">
             <h2 class="text-light mb-5 font-weight-normal">I Am Available For Computer Networking</h2>
