--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                     <li class="social-item"><a class="social-link" href="https://github.com/MITHLESH24364"><i class="ti-github" aria-hidden="true"></i></a></li>
                 </ul>  
             </div>
-            <div class="col-lg-4 about-card">
+               <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">My Expertise</h3>
                 <span class="line mb-5"></span>
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>UX Design</h6>
-                        <p class="subtitle"> exercitat Repellendus,  corrupt.</p>
+                        <p class="subtitle">Design in Figma</p>
                         <hr>
                     </div>
                 </div>
@@ -111,25 +111,27 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-paint-bucket icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Web Development</h6>
-                        <p class="subtitle">Lorem ipsum dolor sit consectetur.</p>
+                        <p class="subtitle">Developing web in JAVA</p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Digital Marketing</h6>
-                        <p class="subtitle">voluptate commodi illo voluptatib.</p>
+                        <h6>Computer Network</h6>
+                        <p class="subtitle">Connection of internet & Computers</p>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class=""></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Computer Networking</h6>
-                        <p class="subtitle">voluptate commodi illo voluptatib.</p>
+                        <h6>Computer Hardware</h6>
+                        <p class="subtitle"> Fix all kinds of problem in CPU</p>
                         <hr>
                     </div>
+                </div>
+                
                 </div>
             </div>
         </div>
