--- a/index.html
+++ b/index.html
@@ -84,9 +84,12 @@
                 <ul class="mt40 info list-unstyled">
                     <li><span>Birthdate</span> : 07/05/2001</li>
                     <li><span>Email</span> : singhmithlesh095@gmail.com</li>
+                    <li><span>Profession</span> : Student</li>
                     <li><span>Phone</span> : +977-9817622227</li>
                     <li><span>Skype</span> : Mithlesh_singh </li>
-                    <li><span>Address</span> :  Barahathawa-5, Sarlahi, Nepal</li>
+                    <li><span>Pernament Address</span> :  Barahathawa-5, Sarlahi, Nepal</li>
+                    <li><span>Temporary Address</span> :  Tyanglaphat-10, Kirtipur, Nepal</li>
+                    <li><span>Hobby</span> :  Playing Baketball, Cricket, 5K Marathon</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="https://www.facebook.com/s.mithlesh07"><i class="ti-facebook" aria-hidden="true"></i></a></li>
