--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Web Designer / Backend Developer / Photography</h5>
-                <p class="mt-20">My name is Mithlesh Kumar Singh. I am a Photographer. I like taking pictures of nature. Nature photography is a wide range of photography taken outdoors and devoted to displaying natural elements such as landscapes, wildlife, plants, and close-ups of natural scenes and textures.</p>
+                <p class="mt-20">I'm a kind and hardworking person willing to make a positive impact in the lives of my family and society. I am passionate about creating solutions for people that increase the quality and comfort in their lives.
+
+Among all the incredible ways in which I can make an impact, I believe that the aforementioned role is what best fits my passions.</p>
                 <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>
             </div>
             <div class="col-lg-4 about-card">
