--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
-                <h5 class="mb-3">A Web Designer / Backend Developer / Photography</h5>
+                <h5 class="mb-3">A Web Designer / Backend Developer / Photography / Network Technician</h5>
                 <p class="mt-20">I'm a kind and hardworking person willing to make a positive impact in the lives of my family and society. I am passionate about creating solutions for people that increase the quality and comfort in their lives.
 
 Among all the incredible ways in which I can make an impact, I believe that the aforementioned role is what best fits my passions.</p>
