--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Mithlesh Singh</h1>
                 <h6 class="header-mono" >Frond End Designer | Back End Designer | Photography</h6>
-                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
+                <a href="D:\college\4 th semester\CV\mithlesh.pdf">
+                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i> Print Resume</button></a>
             </div>
         </div>
     </header>
@@ -78,7 +79,8 @@
                 <p class="mt-20">I'm a kind and hardworking person willing to make a positive impact in the lives of my family and society. I am passionate about creating solutions for people that increase the quality and comfort in their lives.
 
 Among all the incredible ways in which I can make an impact, I believe that the aforementioned role is what best fits my passions.</p>
-                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>
+                <a href="D:\college\4 th semester\CV\mithlesh.pdf">
+                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button></a>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
