--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Among all the incredible ways in which I can make an impact, I believe that the 
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">2021 - Present</h6>
-                            <P>Batchlor Of Information And Communication Technology </P>
+                            <P>Bachelor Of Information And Communication Technology </P>
                             <P class="subtitle">Virinchi College is in partnership with Asia e University (AeU) which is located in Kumaripati, Lalitpur, Nepal. Virinchi College is offering Master of Business Administration (MBA) and Bachelor of Information and Communication Technology (BICT). </P>
                             <hr>
                             <h6 class="title text-danger">2018 - 2020</h6>
