--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Mithlesh Singh</h1>
-                <h6 class="header-mono" >Front End Designer | Back End Designer | Photography</h6>
+                <h6 class="header-mono" >Front End Designer | Back End Developer | Photography</h6>
                 <a href="./assets/mithlesh.pdf">
                 <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i> Print Resume</button></a>
             </div>
