--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@ Among all the incredible ways in which I can make an impact, I believe that the 
                         </div>
                     </div>
                 </div>
-		     <a href='http://www.freevisitorcounters.com'>Get Visitor Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=39401051097fdf69c9041d2cd9c29c9f46ba05d5'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/991480/t/0"></script>
+		     	<script type="text/javascript" src="https://freehitcounters.org/count/bvqp"></script><br>
+ <a href='http://www.freevisitorcounters.com'>Get Visitor Counters</a> <script type='text/javascript' src='https://whomania.com/ctr?id=93a4415bc73b663022df2b35fbf79ede4226d1cd'></script>
             </div>
         </div>
     </section>
